--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <!-- Ramo de girasoles -->
   <div>
-    <img id="ramo" src="ramo.png" alt="Ramo de girasoles">
+    <img id="ramo" src="ramo.jpg" alt="Ramo de girasoles">
   </div>
 
   <!-- Botón romántico -->
