--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       overflow-y: auto;
     }
 
+    /* Corazones flotando */
     .corazon {
       position: fixed;
       bottom: -50px;
@@ -24,6 +25,7 @@
       animation: subir 10s infinite;
     }
 
+    /* Frases flotando */
     .frase {
       position: fixed;
       bottom: -50px;
@@ -133,11 +135,12 @@
 
   <!-- Texto principal -->
   <h1 id="texto">Dicen que las flores amarillas son símbolo de un futuro brillante… 
-  y yo solo lo imagino a tu lado, TE AMO MISHELLE ❤️❤️</h1>
+  y yo solo lo imagino a tu lado, TE AMO MISHELLE ERES MI TODO
+  ATTE: ALEX ❤️❤️</h1>
 
   <!-- Ramo de girasoles -->
   <div>
-    <img id="ramo" src="ramo.jpg" alt="Ramo de girasoles">
+    <img id="ramo" src="ramo.png" alt="Ramo de girasoles">
   </div>
 
   <!-- Botón romántico -->
